src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/CD4AC2006.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram CD4AC2006 {
  public interface A;
  interface B;
}
