src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/CD4AC2006.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram CD4AC2006 {
  abstract interface A;
  derived interface B;
  / interface C;
  final interface D;
  private interface E;
  protected interface F;
  static interface G;
}
